code-examples/kubernetes-playground/services/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
